added analytics tag

--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CFSNPXGF4T"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CFSNPXGF4T');
+</script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BLOW - BOOST Swingometer</title>
+  <title>BLOW OR BOOST?</title>
   <style>
     body {
       margin: 0;
@@ -159,14 +168,14 @@
   </style>
 </head>
 <body>
-  <h1>REEVESOMETER</h1>
+  <h1>REEVES-O-METER</h1>
 
   <div class="headline">
     <span id="headline-text">
        22/10/2025 FINANCIAL TIMES: UK BORROWING COSTS FALL IN BOOST FOR RACHEL REEVES
     </span>
     <span id="headline-indicator" class="boost">
-      REEVESOMETER estimates ▲ 19% boost
+      REEVES-O-METER estimates ▲ 19% boost
     </span>
   </div>
   
