--- a/index.html
+++ b/index.html
@@ -172,16 +172,16 @@
 
   <div class="headline">
     <span id="headline-text">
-       22/10/2025 FINANCIAL TIMES: UK BORROWING COSTS FALL IN BOOST FOR RACHEL REEVES
+       23/10/2025 THE TELEGRAPH: TECH TYCOON FLOATS £10bn OXFORD INVESTMENT IN BOOST FOR REEVES
     </span>
     <span id="headline-indicator" class="boost">
-      REEVES-O-METER estimates ▲ 19% boost
+      REEVES-O-METER estimates ▲ 12% boost
     </span>
   </div>
   
 
   <div class="swingometer">
-    <div class="bloost">BLOOST</div>
+    <div class="bloost">BLOOST!</div>
     <div class="dial">
       <img src="media/reeves.png" alt="Rachel Reeves" class="reeves">
     </div>
@@ -189,8 +189,8 @@
   </div>
 
   <div class="labels">
-    <span class="blow">Blow</span>
-    <span class="boost">Boost</span>
+    <span class="blow">Blow!</span>
+    <span class="boost">Boost!</span>
   </div>
 
   <div class="disclaimer">this is, of course, a parody (but the 
@@ -201,7 +201,7 @@
   <script>
     // Set your desired angle here:
     // -90 = full blow, 0 = bloost, +90 = full boost
-    const angle = 35; // <-- pointer angle
+    const angle = 45; // <-- pointer angle
   
     function setArrow(angle) {
       const arrow = document.getElementById("arrow");
