--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     .dial {
       width: 100%;
       height: 100%;
+      min-height: 300px;
       border-top-left-radius: 1000px;
       border-top-right-radius: 1000px;
       background: linear-gradient(to right, #d62828 0%, #f5f5f5 50%, #2a9d8f 100%);
