visual bugs fixed for mobile

--- a/past.html
+++ b/past.html
@@ -26,6 +26,7 @@
       font-family: "Arial Black", sans-serif;
       color: #222;
       padding-top: 3rem;
+      padding-bottom: 3rem;
     }
 
     h1 {
