--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
     .dial {
       width: 100%;
       height: 100%;
-      min-height: 300px;
       border-top-left-radius: 1000px;
       border-top-right-radius: 1000px;
       background: linear-gradient(to right, #d62828 0%, #f5f5f5 50%, #2a9d8f 100%);
@@ -307,9 +306,11 @@
 
   .swingometer {
     width: 90vw;
-    height: 45vw;         /* maintain the half-circle ratio */
+    height: 45vw;
+    min-height: 240px;
     margin-top: 2rem;
   }
+
 
   .labels {
     width: 95vw;
