further mobile visual tweaks

--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
   body {
     justify-content: flex-start;
     padding-top: 0.5rem;
+    padding-bottom: 3rem;
   }
 
   h1 {
@@ -306,12 +307,15 @@
 
   .swingometer {
     width: 90vw;
-    height: 45vw;
-    min-height: 240px;
+    height: 40vw;
+    min-height: 220px;
     margin-top: 2rem;
   }
 
-
+  .arrow {
+    height: 75%;
+  }
+  
   .labels {
     width: 95vw;
     font-size: 1.1rem;
