--- a/past.html
+++ b/past.html
@@ -146,7 +146,7 @@
   </table>
 
   <div class="text">
-    Oh. Were you expecting more? If I've missed any new ones - <a href="https://x.com/bloworboost">@bloworboost</a>
+    If I've missed any new ones - <a href="https://x.com/bloworboost">@bloworboost</a>
   </div>
 
   <div class="back-link">
