adding bottom padding for mobile

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
   body {
     justify-content: flex-start;
     padding-top: 0.5rem;
-    padding-bottom: 3rem;
+    padding-bottom: 5rem;
   }
 
   h1 {
@@ -315,7 +315,7 @@
   .arrow {
     height: 75%;
   }
-  
+
   .labels {
     width: 95vw;
     font-size: 1.1rem;
@@ -331,6 +331,7 @@
     bottom: auto;
     right: auto;
     margin-top: 1rem;
+    margin-bottom: 2.5rem;
     text-align: center;   /* center align looks cleaner on phones */
     font-size: 0.75rem;
     opacity: 0.8;
