add tracking to share

--- a/index.html
+++ b/index.html
@@ -441,7 +441,8 @@
     <div class="share-buttons">
       <!-- update "BOOST" or "BLOW" in share url-->
       <a href="https://twitter.com/intent/tweet?text=Today’s%20Reeves-o-meter%20reading%20is%20a%20BOOST%20for%20Rachel%20Reeves!%20https%3A%2F%2Freevesometer.co.uk"
-        target="_blank" rel="noopener" class="share-btn twitter">
+        target="_blank" rel="noopener" class="share-btn twitter"
+        onclick="gtag('event', 'share_twitter', { 'event_category': 'engagement', 'event_label': 'Twitter Share Button' });">
         X / Twitter
       </a>
     </div>
