aesthetic fixes, scorecard feature, copy url button, metadata

--- a/past.html
+++ b/past.html
@@ -12,8 +12,19 @@
   </script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Past Headlines | Reevesometer</title>
+
+  <title>Reeves-o-meter | Past headlines</title>
+
   <link rel="stylesheet" href="styles.css" />
+
+  <meta name="title" content="Reeves-o-meter | Past headlines">
+  <meta name="description" content="A historical records of blows and boosts to Rachel Reeves">
+  <meta name="keywords" content="Rachel Reeves, UK politics, parody, blow or boost, budget 2025, Reevesometer">
+  <link rel="canonical" href="https://reevesometer.co.uk/past.html">
+  <link rel="icon" type="image/png" sizes="32x32" href="media/favicon.png">
+  <link rel="icon" type="image/x-icon" href="media/favicon.ico">
+
+
   <style>
     body {
       margin: 0;
@@ -119,7 +130,7 @@
         <th>DATE</th>
         <th>HEADLINE</th>
         <th>SOURCE</th>
-        <th>BLOW / BOOST</th>
+        <th>IMPACT</th>
       </tr>
     </thead>
     <tbody>
