fixing partial previous commit

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <style>
     body {
       margin: 0;
-      height: 100vh;
+      min-height: 100vh;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -542,7 +542,7 @@
     </div>
   </div>
 
-  <a href="past.html" class="past-link">Past Headlines</a>
+  <a href="past/" class="past-link">Past Headlines</a>
 
   <div class="disclaimer">this is, of course, a parody (but the 
     <!-- update this url before each deployment-->
