--- a/index.html
+++ b/index.html
@@ -483,12 +483,12 @@
   <div class="headline">
     <!-- update this headline and the-word before each deployment-->
     <span id="headline-text">
-       27/10/2025 DAILY MAIL: FRESH  
-       <span class="the-word">BLOW</span> FOR REEVES AS NHS BOSSES WARN OF LONGER WAITING TIMES IF THEY DON'T GET EXTRA £3BN
+       04/11/2025 GB NEWS: RACHEL REEVES TOLD 'TAX RISES OF £26 BILLION ARE LIKELY NEEDED' IN PRE-BUDGET  
+       <span class="the-word">BLOW</span>
     </span>
     <span id="headline-indicator" class="blow">
       <!-- update estimate and class before each deployment-->
-      REEVES-O-METER estimates ▼ 1% blow
+      REEVES-O-METER estimates ▼ 2% blow
     </span>
   </div>
   
@@ -511,7 +511,7 @@
   <div class="scorecard">
     <span class="boost-score">BOOSTS: 2</span>
     <span class="divider">|</span>
-    <span class="blow-score">BLOWS: 3</span>
+    <span class="blow-score">BLOWS: 4</span>
   </div>
 
   <div class="vote-section">
@@ -546,15 +546,15 @@
 
   <div class="disclaimer">this is, of course, a parody (but the 
     <!-- update this url before each deployment-->
-    <a href="https://www.dailymail.co.uk/health/article-15231285/Fresh-blow-Reeves-NHS-bosses-warn-longer-waits.html" target="blank" rel="noopener">headline</a>
+    <a href="https://www.gbnews.com/money/rachel-reeves-tax-budget-blow" target="blank" rel="noopener">headline</a>
     is real)
   </div>
 
 <script>
   // starting angle 
   // -90 = full blow, 0 = bloost, +90 = full boost
-  const DEFAULT_ANGLE = 0;   // <-- change this before each deployment
-  const DEPLOY_DATE = "271020252202"; // <-- change this before each deployment
+  const DEFAULT_ANGLE = -10;   // <-- change this before each deployment
+  const DEPLOY_DATE = "041120251830"; // <-- change this before each deployment
   const STORAGE_KEY   = `reevesometerAngle_${DEPLOY_DATE}`;
   const MAX_ANGLE     = 10;   // user movement range
   const STEP          = 2;    // each click = 2°
