--- a/past.html
+++ b/past.html
@@ -135,6 +135,12 @@
     </thead>
     <tbody>
       <tr>
+        <td class="date">04 Nov 2025</td>
+        <td class="link"><a href="https://www.gbnews.com/money/rachel-reeves-tax-budget-blow">Rachel Reeves told 'tax rises of £26billion are likely needed' in pre-Budget blow</a></td>
+        <td class="source">GB News</td>
+        <td class="blow"> ▼ 2% BLOW</td>
+      </tr>
+      <tr>
         <td class="date">27 Oct 2025</td>
         <td class="link"><a href="https://www.dailymail.co.uk/health/article-15231285/Fresh-blow-Reeves-NHS-bosses-warn-longer-waits.html">Fresh blow for Reeves as NHS bosses warn of longer waiting times if they don't get extra £3bn</a></td>
         <td class="source">Daily Mail</td>
