fixing twitter meta image

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <meta name="twitter:url" content="https://reevesometer.co.uk/">
   <meta name="twitter:title" content="Reeves-o-Meter | Blow or Boost?">
   <meta name="twitter:description" content="Tracking blows and boosts to Rachel Reeves, one headline at a time.">
-  <meta name="twitter:image" content="https://reevesometer.co.uk/media/share.png">
+  <meta name="twitter:image" content="https://reevesometer.co.uk/media/share.PNG">
 
   <style>
     body {
