chr- new headline update

--- a/past/index.html
+++ b/past/index.html
@@ -135,6 +135,12 @@
     </thead>
     <tbody>
       <tr>
+        <td class="date">06 Nov 2025</td>
+        <td class="link"><a href="https://www.thetimes.com/business-money/companies/article/banks-interest-rate-decision-is-another-blow-for-reeves-7q36j2sww">Bank’s interest rate decision is another blow for Reeves</a></td>
+        <td class="source">The Times</td>
+        <td class="blow"> ▼ 9% BLOW</td>
+      </tr>
+      <tr>
         <td class="date">04 Nov 2025</td>
         <td class="link"><a href="https://www.gbnews.com/money/rachel-reeves-tax-budget-blow">Rachel Reeves told 'tax rises of £26billion are likely needed' in pre-Budget blow</a></td>
         <td class="source">GB News</td>
