--- a/past/index.html
+++ b/past/index.html
@@ -135,6 +135,12 @@
     </thead>
     <tbody>
       <tr>
+        <td class="date">11 Nov 2025</td>
+        <td class="link"><a href="https://www.independent.co.uk/news/business/uk-unemployment-jobless-rate-wages-ons-b2862668.html">Jobless rate hits highest since post-pandemic in blow to Reeves before Budget</a></td>
+        <td class="source">The Independent</td>
+        <td class="blow"> ▼ 15% BLOW</td>
+      </tr>
+      <tr>
         <td class="date">06 Nov 2025</td>
         <td class="link"><a href="https://www.thetimes.com/business-money/companies/article/banks-interest-rate-decision-is-another-blow-for-reeves-7q36j2sww">Bank’s interest rate decision is another blow for Reeves</a></td>
         <td class="source">The Times</td>
