--- a/past/index.html
+++ b/past/index.html
@@ -135,6 +135,12 @@
     </thead>
     <tbody>
       <tr>
+        <td class="date">13 Nov 2025</td>
+        <td class="link"><a href="https://www.standard.co.uk/business/rachel-reeves-economy-gdp-ons-budget-growth-b1257873.html">New blow for Reeves as economy stalls close to zero in run up to Budget</a></td>
+        <td class="source">The Standard</td>
+        <td class="blow"> ▼ 8% BLOW</td>
+      </tr>
+      <tr>
         <td class="date">11 Nov 2025</td>
         <td class="link"><a href="https://www.independent.co.uk/news/business/uk-unemployment-jobless-rate-wages-ons-b2862668.html">Jobless rate hits highest since post-pandemic in blow to Reeves before Budget</a></td>
         <td class="source">The Independent</td>
