fixed twitter link

--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
 
   <div class="follow-section">
     <a 
-      href="https://twitter.com/reevesometer" 
+      href="https://x.com/bloworboost" 
       target="_blank" 
       rel="noopener" 
       class="follow-link"
