--- a/past/index.html
+++ b/past/index.html
@@ -135,6 +135,11 @@
     </thead>
     <tbody>
       <tr>
+        <td class="date">19 Nov 2025</td>
+        <td class="link"><a href="https://www.independent.co.uk/news/business/inflation-uk-latest-rachel-reeves-budget-b2867493.html">UK inflation drops to 3.6% in pre-Budget boost to consumers and Rachel Reeves</a></td>
+        <td class="source">The Independent</td>
+        <td class="boost"> ▲ 10% BOOST</td>
+      </tr>
         <td class="date">13 Nov 2025</td>
         <td class="link"><a href="https://www.standard.co.uk/business/rachel-reeves-economy-gdp-ons-budget-growth-b1257873.html">New blow for Reeves as economy stalls close to zero in run up to Budget</a></td>
         <td class="source">The Standard</td>
