--- a/index.html
+++ b/index.html
@@ -657,12 +657,12 @@
   <div class="headline">
     <!-- update this headline and the-word before each deployment-->
     <span id="headline-text">
-       18/11/2025 REEVES-O-METER COMMENT: ALL QUIET ON THE REEVES FRONT AS MAHMOOD TAKES THE HEADLINES - THIS CAN ONLY BE A  
-       <span class="the-word">BOOST</span> FOR REEVES!
+       19/11/2025 THE INDEPENDENT: UK INFLATION DROPS TO 3.6% IN PRE-BUDGET 
+       <span class="the-word">BOOST</span> TO CONSUMERS AND RACHEL REEVES
     </span>
     <span id="headline-indicator" class="boost">
       <!-- update estimate and class before each deployment-->
-      REEVES-O-METER estimates ▲ 4% boost
+      REEVES-O-METER estimates ▲ 10% boost
     </span>
   </div>
   
@@ -683,7 +683,7 @@
   <div class="scorecard-header">Budget season scorecard</div>
 
   <div class="scorecard">
-    <span class="boost-score">BOOSTS: 2</span>
+    <span class="boost-score">BOOSTS: 3</span>
     <span class="divider">|</span>
     <span class="blow-score">BLOWS: 7</span>
   </div>
@@ -737,8 +737,8 @@
 
   <div class="disclaimer">this is, of course, a parody (but the 
     <!-- update this url before each deployment-->
-    <!--<a href="https://www.standard.co.uk/business/rachel-reeves-economy-gdp-ons-budget-growth-b1257873.html" target="blank" rel="noopener">headline</a>-->headlines
-    are real)
+    <a href="https://www.independent.co.uk/news/business/inflation-uk-latest-rachel-reeves-budget-b2867493.html" target="blank" rel="noopener">headline</a>
+    is real)
   </div>
 
   <!-- headline generator popup-->
@@ -751,8 +751,8 @@
 <script>
   // starting angle 
   // -90 = full blow, 0 = bloost, +90 = full boost
-  const DEFAULT_ANGLE = -36;   // <-- change this before each deployment
-  const DEPLOY_DATE = "181120251744"; // <-- change this before each deployment
+  const DEFAULT_ANGLE = -26;   // <-- change this before each deployment
+  const DEPLOY_DATE = "191120250801"; // <-- change this before each deployment
   const STORAGE_KEY   = `reevesometerAngle_${DEPLOY_DATE}`;
   const MAX_ANGLE     = 10;   // user movement range
   const STEP          = 2;    // each click = 2°
