--- a/past/index.html
+++ b/past/index.html
@@ -116,7 +116,7 @@
     @media (min-width: 700px) {
   td:last-child,
   th:last-child {
-    min-width: 120px; /* increase or decrease as you like (default ~100px) */
+    min-width: 120px; 
   }
 }
   </style>
@@ -134,6 +134,12 @@
       </tr>
     </thead>
     <tbody>
+      <tr>
+        <td class="date">20 Nov 2025</td>
+        <td class="link"><a href="https://www.express.co.uk/news/politics/2136679/Taxes-Labour-economy-Rachel-Reeves-Eurotunnel">Huge blow for Rachel Reeves as Eurotunnel cancels all UK projects over high taxes</a></td>
+        <td class="source">Daily Express</td>
+        <td class="blow"> ▼ 5% BLOW</td>
+      </tr>      
       <tr>
         <td class="date">19 Nov 2025</td>
         <td class="link"><a href="https://www.independent.co.uk/news/business/inflation-uk-latest-rachel-reeves-budget-b2867493.html">UK inflation drops to 3.6% in pre-Budget boost to consumers and Rachel Reeves</a></td>
